--- a/public/assets/frontend/css/case-studies.css
+++ b/public/assets/frontend/css/case-studies.css
@@ -4,7 +4,9 @@
   position: relative;
   width: 100%;
   height: 100vh;
-  background: url("/assets/frontend/media/pages/case_studies/images/banner_case_studies.jpg") no-repeat center center/cover;
+  /* background: url("/assets/frontend/media/pages/case_studies/images/banner_case_studies.jpg") no-repeat center center/cover; */
+  background-repeat: no-repeat;
+  background-size: cover;
 }
 
 /* overlay */
