--- a/public/assets/frontend/css/single-blog.css
+++ b/public/assets/frontend/css/single-blog.css
@@ -4,6 +4,8 @@
        /* background: url('/assets/frontend/media/pages/single_blog/images/single_blog_banner.jpg') no-repeat center center/cover; */
        height: 300px;
        color: #fff;
+       background-repeat: no-repeat;
+       background-size: cover;
    }
 
    .single-blog-banner::before {
