--- a/public/assets/frontend/css/index.css
+++ b/public/assets/frontend/css/index.css
@@ -449,9 +449,24 @@
     transition: all 0.3s ease;
 }
 
+.banner-overlay {
+    position: absolute;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    background: var(--overlay-color);
+    z-index: 1;
+}
+
 .testimonial-card:hover {
     transform: scale(1.05);
     box-shadow: 0px 12px 30px rgba(0, 0, 0, 0.2);
+}
+
+.blog-title{
+    font-size: 14px;
+    color: #fff;
 }
 
 /* Responsive Adjustments */
