--- a/public/assets/frontend/css/about.css
+++ b/public/assets/frontend/css/about.css
@@ -7,14 +7,14 @@
     background-size: cover;
 }
 
-.about-banner-overlay {
+/* .about-banner-overlay {
     position: absolute;
     top: 0;
     left: 0;
     width: 100%;
     height: 100%;
     background-color: var(--overlay-color);
-}
+} */
 
 .about-banner-content {
     z-index: 1;
