--- a/public/assets/frontend/css/index.css
+++ b/public/assets/frontend/css/index.css
@@ -399,6 +399,10 @@
         font-size: 1rem;
         text-align: justify;
     }
+    .hero-icon-image{
+        width: 100%;
+        height: 100%;
+    }
 }
 
 @media (max-width: 576px) {
